# Rust-programs

backend-server/functional-backend/: .env  Cargo.toml
backend-server/functional-backend/migrations/: 20250801070035_init.sql  20250801072404_create_more_tables.sql
backend-server/functional-backend/src/: main.rs
backend-server/functional-backend/src/routes/: helper.rs  mod.rs
backend-server/functional-backend/src/routes/create_contact/: configs.rs  logic.rs  mod.rs
backend-server/functional-backend/src/routes/create_user/: logic.rs
backend-server/functional-backend/src/routes/get_contact/: configs.rs  logic.rs
backend-server/functional-backend/src/routes/get_contacts/: configs.rs  logic.rs
backend-server/functional-backend/src/routes/get_user/: configs.rs  logic.rs
backend-server/functional-backend/src/routes/root/: logic.rs  mod.rs  root_configs.rs  root_logic.rs
backend-server/functional-backend/src/routes/set_user/: configs.rs  logic.rs
backend-server/hello-world/: Cargo.toml
cli-tool/: Cargo.toml
mini-grep/src/: lib.rs  main.rs
multi-threaded-web-server/: Cargo.toml
multi-threaded-web-server/src/: lib.rs  main.rs
real-time-communication/: Cargo.toml
real-time-communication/server/: Cargo.toml
real-time-communication/src/: lib.rs  main.rs
real-time-communication/terminal-client/: Cargo.toml
shell/: Cargo.toml
shell/src/: lib.rs  main.rs
web-scraper-mini/src/: main.rs
web-server/: 404.html  hello.html
web-server/src/: lib.rs  main.rs
web-socket-like-streaming/: Cargo.toml
web-socket-like-streaming/src/: main.rs
(+34 files in other folders)
