[package]
name = "functional-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
